--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Study</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    
 </head>
 <body>
     <button id='btn'>버튼</button>
-    <script defer src="./this.js"></script>
+    <script defer src="./promise.js"></script>
 </body>
 
 </html>
